--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: #999999;
   margin: 0;
   padding: 0;
+  color:#252525;
 }
 
 h1,
@@ -12,6 +13,28 @@ h4,
 h5,
 h6 {
   font-family: 'Stick No Bills', 'Roboto', Helvetica, sans-serif;
+}
+
+header {
+  max-width: 1080px;
+  margin: 1rem auto;
+  padding: 0 1rem;
+}
+
+header ul {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+}
+
+
+a:visited {
+  color:black;
+}
+
+header ul li {
+  margin: 0 2rem;
 }
 
 .container {
@@ -66,6 +89,12 @@ form button {
   text-transform: uppercase;
 }
 
+.top-arrow ul {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+}
 .site-footer {
   padding: 2rem 0;
 }
