--- a/css/main.css
+++ b/css/main.css
@@ -13,11 +13,12 @@ h4,
 h5,
 h6 {
   font-family: 'Stick No Bills', 'Roboto', Helvetica, sans-serif;
+  color: white;
 }
 
 header {
   max-width: 1080px;
-  margin: 1rem auto;
+  margin: 0 auto;
   padding: 0 1rem;
 }
 
@@ -28,14 +29,25 @@ header ul {
   padding: 0;
 }
 
-
-a:visited {
-  color:black;
-}
-
 header ul li {
   margin: 0 2rem;
 }
+
+a:link,
+a:visited {
+    text-decoration: none;
+    color: white;
+}
+
+.main-nav ul{
+  height: 40px;
+}
+
+.main-nav ul li:hover {
+  background-color: black;
+  color: white;
+}
+
 
 .container {
   max-width: 1080px;
@@ -65,6 +77,7 @@ img {
   color: inherit;
   text-decoration: none;
   font-size: 1.25rem;
+  padding-top: 0.5rem;
 }
 
 form input,
@@ -87,6 +100,11 @@ form button {
   border: 2px solid black;
   padding: 1rem;
   text-transform: uppercase;
+}
+
+button:hover {
+  background-color: white;
+  color: black;
 }
 
 .top-arrow ul {
