--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,25 @@ header ul li {
   margin: 0 2rem;
 }
 
+.skip-links {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.skip-links a {
+  position: absolute;
+  top: -3em;
+  background-color: black;
+  color:white;
+  padding: .5em 1em;
+  font-weight: bold;
+}
+
+.skip-links a:focus{
+  top: 0;
+}
+
 a:link,
 a:visited {
     text-decoration: none;
@@ -47,7 +66,6 @@ a:visited {
   background-color: black;
   color: white;
 }
-
 
 .container {
   max-width: 1080px;
