--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: #ffffff;;
+  background-color: #ffffff;
   margin: 0;
   padding: 0;
   color:black;
